Keep only one FunctionAuthorizationClient since both do the same. Throw dedicated Error if call to eiam didn't work. Refactoring